syntax = "proto3";

package packet;
option go_package = "./;packet";

message StorePublishMessage  {
  string MessageID = 1;
  bytes PublishPacket = 2;
  bool PubReceived = 3;
  int64 CreatedTime = 4;
  int64  ExpiredTime = 5;
  string SenderID = 6;
}
